@@ -1,4 +1,5 @@
 5.1.7 -> 5.1.8:
+    - jbj: yarn: convert rpmgi refcount to usage mutex.
     - jbj: yarn: use the pool changes where possible.
     - jbj: yarn: add generic Link/Unlink refcount diddlers.
     - jbj: yarn: add debugging, reuse counter, and zlog to rpmioPool.
